# HypotheSAEs

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
demo-data/: yelp-demo-holdout-2K.json  yelp-demo-val-2K.json
hypothesaes/: __init__.py  annotate.py  embedding.py  evaluation.py  interpret_neurons.py  llm_api.py  llm_local.py  quickstart.py  sae.py  select_neurons.py  utils.py
hypothesaes/prompts/: annotate-simple.txt  annotate.txt  interpret-neuron-binary-reasoning.txt  interpret-neuron-binary.txt  surface-similarity.txt
local_llm_experiments/: generate_local_annotations.py  generate_local_interpretations.py  local_llm.ipynb  plot_local_llm_results.ipynb  score_interpretation_fidelity.py  score_interpretations.py
notebooks/: detailed_usage.ipynb  experiment_reproduction.ipynb  local_llm.ipynb  quickstart.ipynb  quickstart_local.ipynb
supplementary_experiments/: generate_local_annotations.py  generate_local_interpretations.py
tests/: profile_annotation.py  sentences.py  test_llm_api.py  test_local_llm.py  test_local_openai_compatible.py  test_thinking_output_parsing.py  test_workflow.py
